--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="header">
 
     <div class="user">
-        <img src="images/womwn1.jpg" alt="">
+        <img src="images/prachi image.jpg" alt="">
         <h3>I am there</h3>
         <P>front-end developer</P>
       </div>
@@ -104,7 +104,7 @@
 
   
   <div class="progress">
-    <h3> HTML <span>95%</span></h3>
+    <h3> HTML <span>98%</span></h3>
     <div class="bar bar-2-1"><span></span></div>
     <h3>CSS<span>80%</span></h3>
     <div class="bar bar-2-2"><span></span></div>
@@ -112,6 +112,24 @@
     <div class="bar bar-2-3"><span></span></div>
   </div>
 
+  <div class="progress">
+    <h3> Typescript <span>95%</span></h3>
+    <div class="bar bar-2-1"><span></span></div>
+    <h3>bootstrap<span>80%</span></h3>
+    <div class="bar bar-2-2"><span></span></div>
+    <h3>Angular material<span>65%</span></h3>
+    <div class="bar bar-2-3"><span></span></div>
+  </div>
+
+
+  <div class="progress">
+    <h3> Angular <span>95%</span></h3>
+    <div class="bar bar-2-1"><span></span></div>
+    <h3>Git<span>80%</span></h3>
+    <div class="bar bar-2-2"><span></span></div>
+    <h3>Jira<span>65%</span></h3>
+    <div class="bar bar-2-3"><span></span></div>
+  </div>
 </section>
 <!-- 
 about section end -->
@@ -253,7 +271,7 @@ about section end -->
 <!-- contact section end -->
 
 <!-- credits -->
-<div class="credits">created by<span>miss. web designer </span>All right reserved</div>
+<div class="credits">created by <span>miss. web designer </span>All right reserved</div>
 
 
     <script src="script.js"></script>
