--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      <section class="home" id="home">
     <div class="content">
       <h3>I am Developer</h3>
-      <p>Angular Developer|UI Designig | web-Designing |</p>
+      <p>Angular Developer| web-Designing </p>
       <a href="#" class="btn">Download CV</a>
     </div>
 
