--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="user">
         <img src="images/prachi image.jpg" alt="">
-        <h3>I am there</h3>
+        <h3>I am Prachi Balpande</h3>
         <P>front-end developer</P>
       </div>
 
@@ -167,15 +167,10 @@ about section end -->
            eveniet ducimus quo ullam soluta dolorem facilis,</p>
       </div>
 
-      <div class="box">
-      <i class="fas fa-search-dollar"></i>
-      <h3>SEO marketing</h3>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti,
-         eveniet ducimus quo ullam soluta dolorem facilis, </p>
-    </div>
+      
     <div class="box">
         <i class="fas fa-wordpress"></i>
-        <h3>wordpress</h3>
+        <h3>UI-UX Design</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti,
            eveniet ducimus quo ullam soluta dolorem facilis,</p>
       </div>
@@ -271,7 +266,7 @@ about section end -->
 <!-- contact section end -->
 
 <!-- credits -->
-<div class="credits">created by <span>miss. web designer </span>All right reserved</div>
+<div class="credits">created by <span>Miss. Prachi Balpande. </span>All right reserved</div>
 
 
     <script src="script.js"></script>
