--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="header">
 
     <div class="user">
-      <img src="images/sandeep Image.jpeg" alt="">
+      <img src="images/sandeep Image.jpeg" alt="Images">
       <h3>I am Sandeep Jha</h3>
       <P>front-end developer & back-end developer</P>
     </div>
